--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bloom791 - AKA Knarf - AKA Bloosmoy</title>
+  <title>Bloom791 - Horror, CGI & Animation</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
@@ -137,21 +137,24 @@
   </div>
 
   <div class="overlay" id="main">
-    <h1>BLOOM</h1>
+    <h1>I'm Bloom791</h1>
     <p>
-      I'm into horror, animation, CGI, and making weird & creepy stuff for YouTube.
+      I do youtube sometimes. I play roblox, PUBG, and l4d2.
     </p>
     <p>
-      I mostly just do short films, episodes fo my horror series, or experimental visuals.
+      I LOVE "Supermassive Black Hole" by Muse. I LOVE the artist "Artemas".
     </p>
     <p>
-      I use a mix of tools like Blender, Davinci Resolve, and Adobe Flash
+      I use a mix of tools like Blender, Davinci Resolve, and Adobe Flash.
     </p>
     <p>
-      If it's unsettling or cinematic, chances are I'm working on it.
+      I LOVE fnaf/bendy music/games. And I LOVE this show called "Supernatural"
     </p>
     <p>
-      This site is just a site where I just put all my socials. Nothing too special.
+      This site is just a site where I just put all my socials. :p
+    </p>
+    <p>
+      (Wow this guy is so cool he coded a website!) I was rushing making this. (it sucks)
     </p>
   </div>
 
@@ -174,8 +177,8 @@
 
   <script>
     const audioOptions = [
-      "https://files.catbox.moe/maoyhw.mp3",
-      "https://files.catbox.moe/5w384r.mp3"
+      "https://files.catbox.moe/pcmu8p.mp3",
+      "https://files.catbox.moe/bz9rni.mp3"
     ];
     const selectedAudio = audioOptions[Math.floor(Math.random() * audioOptions.length)];
     const audio = new Audio(selectedAudio);
@@ -187,6 +190,7 @@
       intro.style.transition = "transform 0.3s ease-out, opacity 1s ease";
       intro.style.transform = "scale(2)";
       intro.style.opacity = 0;
+
       setTimeout(() => {
         intro.style.display = "none";
         document.getElementById("main").style.opacity = 1;
