--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bloom791 - Horror, CGI & Animation</title>
+  <title>i own a website, how wow very</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
@@ -137,7 +137,7 @@
   </div>
 
   <div class="overlay" id="main">
-    <h1>I'm Bloom791</h1>
+    <h1>HIIIII</h1>
     <p>
       I do youtube sometimes. I play roblox, PUBG, and l4d2.
     </p>
