--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
           </div>
         </div>
         <div class="window-body">
-          <div style="font-size:12px">Hi. I'm Bloom791. I'll add more to this arg soon :p</div>
+          <div style="font-size:12px">Well, shit. What I thought was the worst got even worse. I'm seeing it again.</div>
         </div>
       </div>
 
@@ -401,7 +401,7 @@
   const taskbarLeft = document.getElementById('taskbarLeft');
 
   // Hard-coded password per request:
-  const CORRECT = "pass";
+  const CORRECT = "cass";
 
   // Audio (plays when password screen opens; and when Welcome has fully faded in)
   const pwSound = new Audio('https://files.catbox.moe/t8ious.wav');
